--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "expect": "^24.0.0",
     "express": "^4.16.4",
+    "mocha": "^5.2.0",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.6"
+    "mongoose": "^5.4.6",
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
   }
 }
