--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server/server.js"
+    "start": "node server/server.js"
   },
-  "engines":{
-    "node":"10.14.1"
+  "engines": {
+    "node": "10.14.1"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "expect": "^24.0.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mocha": "^5.2.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.6",
